--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <nav>
     <a href="#">Home</a>
     <a href="#">Notícias</a>
-    <a href="#">Curiosidades</a>
-    <a href="#">Fale Conosco</a>
+    <a href="#">Mais+</a>
+    <a href="#">Contato</a>
   </nav>
 
 
