--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <a href="#">Notícias</a>
     <a href="#">Mais+</a>
     <a href="#">Contato</a>
+    <input type="text" placeholder="Pesquisar">
+    <button type="submit">Pesquisar</button>
   </nav>
 
 
