Barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
   </header>
 
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Notícias</a>
-    <a href="#">Mais+</a>
-    <a href="#">Contato</a>
-    <input type="text" placeholder="Pesquisar">
-    <button type="submit">Pesquisar</button>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Notícias</a>
+      <a href="#">Mais+</a>
+      <a href="#">Contato</a>
+    </div>
+
+      <div class="pesquisa">
+        <input type="text" placeholder="Pesquisar">
+        <button type="submit">Pesquisar</button>
+      </div>
   </nav>
 
 
